# oxide-dock

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  biome.json  eslint.config.js  index.html  lefthook.yml  oxlint.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.art/: branding.md  icon.af
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-bun/: action.yml
.github/workflows/: cargo-audit.yml  ci.yml  dependency-audit.yml  release-please.yml  release.yml
docs/: recommended-plugins.md
scripts/: bootstrap.sh
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  dev.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
src/components/: ClipboardDemo.vue  FileDialogDemo.vue  NotificationDemo.vue  SystemInfoDemo.vue
src/composables/: useDarkMode.ts
src/layouts/: DefaultLayout.vue
src/pages/: AboutPage.vue  HomePage.vue  NotFoundPage.vue
src/router/: index.ts
src/shared/: ipc.ts
tests/e2e/: app.spec.ts
tests/unit/: AboutPage.test.ts  App.test.ts  ClipboardDemo.test.ts  DefaultLayout.test.ts  FileDialogDemo.test.ts  HomePage.test.ts  NotFound.test.ts  NotificationDemo.test.ts  SystemInfoDemo.test.ts  counter.test.ts  ipc.test.ts  router.test.ts  types.test.ts  useDarkMode.test.ts
(+1 files in other folders)
