[package]
name = "oxidedock"
version = "0.1.0"
description = "OxideDock: a Rust + Vue desktop application foundation"
edition = "2021"

[lib]
name = "oxidedock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
