[package]
name = "oxidedock"
version = "0.4.0" # x-release-please-version
description = "OxideDock: a Rust + Vue desktop application foundation"
edition = "2021"

[lib]
name = "oxidedock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
thiserror = "2"
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic false positives
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
